tests/fixtures/invalid/min_dict_bool.py
# Cannot call min() with Dict[str, int], Bool
x = min({"a": 1}, True)
